Published items are now being tracked in the database. Refactoring away from messaging. Need to get the CM to now process CacheQueue.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -38,6 +38,9 @@
       </group>
     </pipelines>
     <events>
+      <event name="publish:begin">
+        <handler type="Foundation.HtmlCache.Events.PublishJobBegin, Foundation.HtmlCache" method="BeginPublishTracking" role:require="Standalone or ContentManagement"/>
+      </event>
       <event name="publish:itemProcessing">
         <handler type="Foundation.HtmlCache.Events.ItemPrePublish, Foundation.HtmlCache" method="PreCalculatePublishOperation" role:require="Standalone or ContentManagement"/>
       </event>
@@ -48,6 +51,7 @@
         <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
           <patch:delete />
         </handler>
+        <handler type="Foundation.HtmlCache.Events.PublishJobEnd, Foundation.HtmlCache" method="SavePublishedItemsToCacheDb" role:require="Standalone or ContentManagement"/>
       </event>
       <event name="publish:end:remote">
         <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
