--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -148,6 +148,40 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agents\HtmlCacheQueueAgent.cs" />
+    <Compile Include="DB\CacheItem.cs" />
+    <Compile Include="DB\CacheItemConfiguration.cs" />
+    <Compile Include="DB\CacheItemsTemp.cs" />
+    <Compile Include="DB\CacheItemsTempConfiguration.cs" />
+    <Compile Include="DB\CacheKey.cs" />
+    <Compile Include="DB\CacheKeyConfiguration.cs" />
+    <Compile Include="DB\CacheKeysItem.cs" />
+    <Compile Include="DB\CacheKeysItemConfiguration.cs" />
+    <Compile Include="DB\CacheKeysItemsTemp.cs" />
+    <Compile Include="DB\CacheKeysItemsTempConfiguration.cs" />
+    <Compile Include="DB\CacheKeysTemp.cs" />
+    <Compile Include="DB\CacheKeysTempConfiguration.cs" />
+    <Compile Include="DB\CacheQueue.cs" />
+    <Compile Include="DB\CacheQueueBlocker.cs" />
+    <Compile Include="DB\CacheQueueBlockerConfiguration.cs" />
+    <Compile Include="DB\CacheQueueConfiguration.cs" />
+    <Compile Include="DB\CacheQueueMessageType.cs" />
+    <Compile Include="DB\CacheQueueMessageTypeConfiguration.cs" />
+    <Compile Include="DB\CacheSiteLang.cs" />
+    <Compile Include="DB\CacheSiteLangConfiguration.cs" />
+    <Compile Include="DB\CacheSiteLangTemp.cs" />
+    <Compile Include="DB\CacheSiteLangTempConfiguration.cs" />
+    <Compile Include="DB\Database.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\IItemTrackingProvider.cs" />
+    <Compile Include="DB\ItemTrackingProvider.cs" />
+    <Compile Include="DB\MessageTypeEnum.cs" />
+    <Compile Include="DB\ProcessQueueReturnModel.cs" />
+    <Compile Include="DB\PublishedItem.cs" />
+    <Compile Include="DB\PublishedItemConfiguration.cs" />
     <Compile Include="Events\ItemPrePublish.cs" />
     <Compile Include="Commands\SiteClearCacheAllSitesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheAllLanguagesCommand.cs" />
@@ -160,12 +194,7 @@
     <Compile Include="Extensions\SiteInfoExtensions.cs" />
     <Compile Include="Messages\ItemMetaData.cs" />
     <Compile Include="Messages\RenderingProcessorArgs.cs" />
-    <Compile Include="Models\CacheKeyItem.cs" />
-    <Compile Include="Models\CacheQueue.cs" />
-    <Compile Include="Models\CacheItem.cs" />
-    <Compile Include="Models\CacheKey.cs" />
-    <Compile Include="Models\CacheQueueMessageType.cs" />
-    <Compile Include="Models\PublishedItem.cs" />
+    <Compile Include="Models\ProcessCacheQueueResult.cs" />
     <Compile Include="Models\PublishItemTracking.cs" />
     <Compile Include="Models\TrackOperation.cs" />
     <Compile Include="Models\PublishOperation.cs" />
@@ -175,15 +204,16 @@
     <Compile Include="Pipelines\EndRenderingContext.cs" />
     <Compile Include="Pipelines\BeginRenderingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\ItemTrackingProvider.cs" />
     <Compile Include="Providers\ItemTrackingStore.cs" />
     <Compile Include="Providers\TrackItemAccess.cs" />
-    <Compile Include="Queries\AddToCache.cs" />
-    <Compile Include="Queries\DeleteFromCache.cs" />
     <Compile Include="Settings\GlobalCacheTemplateSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Foundation\Foundation.HtmlCache.Serialization.config" />
+    <Content Include="DB\Database.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Database.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\SQL\schema.sql" />
     <Content Include="sitecore\admin\HtmlCacheViewer.aspx" />
     <Content Include="App_Config\Include\zFoundation\zFoundation.HtmlCache.config" />
