Solution fully working with AddToCache

--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -151,14 +151,14 @@
     <Compile Include="Agents\HtmlCacheQueueAgent.cs" />
     <Compile Include="DB\CacheItem.cs" />
     <Compile Include="DB\CacheItemConfiguration.cs" />
-    <Compile Include="DB\CacheItemsTemp.cs" />
-    <Compile Include="DB\CacheItemsTempConfiguration.cs" />
+    <Compile Include="DB\CacheItemTemp.cs" />
+    <Compile Include="DB\CacheItemTempConfiguration.cs" />
     <Compile Include="DB\CacheKey.cs" />
     <Compile Include="DB\CacheKeyConfiguration.cs" />
-    <Compile Include="DB\CacheKeysItem.cs" />
-    <Compile Include="DB\CacheKeysItemConfiguration.cs" />
-    <Compile Include="DB\CacheKeysTemp.cs" />
-    <Compile Include="DB\CacheKeysTempConfiguration.cs" />
+    <Compile Include="DB\CacheKeyItem.cs" />
+    <Compile Include="DB\CacheKeyItemConfiguration.cs" />
+    <Compile Include="DB\CacheKeyTemp.cs" />
+    <Compile Include="DB\CacheKeyTempConfiguration.cs" />
     <Compile Include="DB\CacheQueue.cs" />
     <Compile Include="DB\CacheQueueBlocker.cs" />
     <Compile Include="DB\CacheQueueBlockerConfiguration.cs" />
@@ -177,7 +177,6 @@
     <Compile Include="DB\IItemTrackingProvider.cs" />
     <Compile Include="DB\ItemTrackingProvider.cs" />
     <Compile Include="DB\MessageTypeEnum.cs" />
-    <Compile Include="DB\ProcessQueueReturnModel.cs" />
     <Compile Include="Events\ItemPrePublish.cs" />
     <Compile Include="Commands\SiteClearCacheAllSitesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheAllLanguagesCommand.cs" />
