Need to sort out events but the final structure is in place.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -12,6 +12,7 @@
     <pipelines>
       <initialize>
         <processor type="Foundation.HtmlCache.Pipelines.InitializePersistedHtmlCache, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.InitializeRemoteEventSubscriptions, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
       </initialize>
       <mvc.renderRendering>
         <processor
@@ -44,6 +45,19 @@
       <event name="publish:itemProcessed">
         <handler type="Foundation.HtmlCache.Events.ItemPostPublish, Foundation.HtmlCache" method="PostCalculatePublishOperation" role:require="Standalone or ContentManagement"/>
       </event>
+      <event name="cache:clearCacheHtml:Remote">
+        <handler type="Foundation.HtmlCache.Events.ClearCacheHtml, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+      </event>
+      <event name="cache:clearCacheSite:Remote">
+        <handler type="Foundation.HtmlCache.Events.ClearCacheSite, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+      </event>
+      <event name="cache:clearCacheSiteAllLanguages:Remote">
+        <handler type="Foundation.HtmlCache.Events.ClearCacheSiteAllLanguages, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+      </event>
+      <event name="cache:clearCacheAllSites:Remote">
+        <handler type="Foundation.HtmlCache.Events.ClearCacheAllSites, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+      </event>
+
       <event name="publish:end">
         <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
           <patch:delete />
@@ -56,6 +70,9 @@
         </handler>
       </event>
     </events>
+    <scheduling>
+      <agent type="Foundation.HtmlCache.Agents.HtmlCacheQueueAgent, Foundation.HtmlCache" method="ProcessCacheQueue" interval="00:00:10" role:require="Standalone or ContentManagement" />
+    </scheduling>
     <controlSources>
       <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
