--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -117,6 +117,7 @@
     <Reference Include="System.IO.Compression, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
@@ -177,23 +178,31 @@
     <Compile Include="DB\IItemTrackingProvider.cs" />
     <Compile Include="DB\ItemTrackingProvider.cs" />
     <Compile Include="DB\MessageTypeEnum.cs" />
+    <Compile Include="Events\ClearCacheAllSites.cs" />
+    <Compile Include="Events\ClearCacheArgs.cs" />
+    <Compile Include="Events\ClearCacheHtml.cs" />
+    <Compile Include="Events\ClearCacheOperation.cs" />
+    <Compile Include="Events\ClearCacheSite.cs" />
+    <Compile Include="Events\ClearCacheSiteAllLanguages.cs" />
     <Compile Include="Events\ItemPrePublish.cs" />
     <Compile Include="Commands\SiteClearCacheAllSitesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheAllLanguagesCommand.cs" />
     <Compile Include="Commands\SiteClearCacheCommand.cs" />
     <Compile Include="Controls\MultiRootTreeList.cs" />
     <Compile Include="Events\ItemPostPublish.cs" />
+    <Compile Include="Events\ItemPublishedArgs.cs" />
     <Compile Include="Events\PublishJobEnd.cs" />
     <Compile Include="Events\PublishJobBegin.cs" />
     <Compile Include="Extensions\EFExtensions.cs" />
     <Compile Include="Extensions\SiteInfoExtensions.cs" />
-    <Compile Include="Messages\ItemMetaData.cs" />
-    <Compile Include="Messages\RenderingProcessorArgs.cs" />
+    <Compile Include="Arguments\ItemMetaData.cs" />
+    <Compile Include="Arguments\RenderingProcessorArgs.cs" />
     <Compile Include="Models\ProcessCacheQueueResult.cs" />
     <Compile Include="Models\PublishItemTracking.cs" />
     <Compile Include="Models\TrackOperation.cs" />
     <Compile Include="Models\PublishOperation.cs" />
     <Compile Include="Pipelines\InitializePersistedHtmlCache.cs" />
+    <Compile Include="Pipelines\InitializeRemoteEventSubscriptions.cs" />
     <Compile Include="Pipelines\SaveToPersistantCache.cs" />
     <Compile Include="Pipelines\EndRenderingContext.cs" />
     <Compile Include="Pipelines\BeginRenderingContext.cs" />
