Prioro to fixing publish operation

--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -176,6 +176,7 @@
     <Compile Include="DB\IItemTrackingProvider.cs" />
     <Compile Include="DB\ItemTrackingProvider.cs" />
     <Compile Include="DB\MessageTypeEnum.cs" />
+    <Compile Include="DB\UspGetStatsReturnModel.cs" />
     <Compile Include="DB\UspLockAndProcessCacheQueueEntryReturnModel.cs" />
     <Compile Include="Events\ClearCacheArgs.cs" />
     <Compile Include="Events\ClearCacheHtml.cs" />
