changed queue strategy from per component to per page for reduced inserts. Also, deduplicating on in memory.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -14,6 +14,11 @@
         <processor type="Foundation.HtmlCache.Pipelines.InitializePersistedHtmlCache, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
         <processor type="Foundation.HtmlCache.Pipelines.InitializeRemoteEventSubscriptions, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
       </initialize>
+      <mvc.requestBegin>
+        <processor
+          type="Foundation.HtmlCache.Pipelines.BeginTrackingContext, Foundation.HtmlCache"
+          patch:after="processor[@type='Sitecore.ContentTesting.Mvc.Pipelines.Response.RequestBegin.EvaluateTestExposure, Sitecore.ContentTesting.Mvc']" role:require="Standalone or ContentDelivery" />
+      </mvc.requestBegin>
       <mvc.renderRendering>
         <processor
           type="Foundation.HtmlCache.Pipelines.BeginRenderingContext, Foundation.HtmlCache"
@@ -21,10 +26,15 @@
         <processor
           type="Foundation.HtmlCache.Pipelines.EndRenderingContext, Foundation.HtmlCache"
           patch:before="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+      </mvc.renderRendering>
+      <mvc.requestEnd>
+        <processor
+          type="Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache"
+          patch:after="processor[@type='Sitecore.Mvc.ExperienceEditor.Pipelines.Request.RequestEnd.AddPageExtenders, Sitecore.Mvc.ExperienceEditor']" role:require="Standalone or ContentDelivery" />
         <processor
           type="Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache"
-          patch:before="processor[@type='Foundation.HtmlCache.Pipelines.EndRenderingContext, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
-      </mvc.renderRendering>
+          patch:after="processor[@type='Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+      </mvc.requestEnd>
       <group name="itemProvider" groupName="itemProvider">
         <pipelines>
           <getItem>
