--- a/code/packages.config
+++ b/code/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
-  <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Framework.Messaging.Abstractions" version="4.0.1" targetFramework="net472" />
+  <package id="Sitecore.Framework.Messaging.Configuration" version="4.0.1" targetFramework="net472" />
+  <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Mvc" version="9.2.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net462" />
 </packages>
