Start of consolidation of Message Queue for following scenarios: CM->CD: Publish "Delete html cache entry" to all CDs CM->CD: Publish "Delete html cache entry for site" to all CDs CD->CD: Publish "Add new html cache entries" to other CDs

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -84,15 +84,17 @@
         <Foundation.HtmlCache.BroadcastHtmlCache>
           <Transport>
             <AzureServiceBus messagingTransport:require="AzureServiceBus">
-              <OneWay>false</OneWay>
+              <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
+              <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <Mode>Standard</Mode>
-              <InputQueueName>CD-CD</InputQueueName>
+              <InputQueueName>HCQ</InputQueueName>
             </AzureServiceBus>
             <SqlServer messagingTransport:require="SQL">
-              <OneWay>false</OneWay>
+              <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
+              <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <InputQueueName>CD-CD</InputQueueName>
+              <InputQueueName>HCQ</InputQueueName>
             </SqlServer>
           </Transport>
           <Routing>
@@ -100,7 +102,7 @@
               <TypeMappings>
                 <CDCDBroadcastHtmlCacheMapping>
                   <Type>Sitecore.Marketing.Automation.Messaging.Messages.PurgeFromCampaignMessage, Sitecore.Marketing.Automation</Type>
-                  <DestinationQueue>CD-CD</DestinationQueue>
+                  <DestinationQueue>HCQ</DestinationQueue>
                 </CDCDBroadcastHtmlCacheMapping>
               </TypeMappings>
             </TypeBasedMappings>
@@ -116,114 +118,6 @@
           </Options>
           <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory, Sitecore.Messaging"/>
         </Foundation.HtmlCache.BroadcastHtmlCache>
-
-        <Foundation.HtmlCache.BroadcastHtmlCacheDelete>
-          <Transport>
-            <AzureServiceBus messagingTransport:require="AzureServiceBus">
-              <OneWay>true</OneWay>
-              <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <Mode>Standard</Mode>
-              <InputQueueName>CM-CD</InputQueueName>
-            </AzureServiceBus>
-            <SqlServer messagingTransport:require="SQL">
-              <OneWay>true</OneWay>
-              <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <InputQueueName>CM-CD</InputQueueName>
-            </SqlServer>
-          </Transport>
-          <Routing>
-            <TypeBasedMappings>
-              <TypeMappings>
-                <CDCDBroadcastHtmlCacheMapping>
-                  <Type>Sitecore.Marketing.Automation.Messaging.Messages.PurgeFromCampaignMessage, Sitecore.Marketing.Automation</Type>
-                  <DestinationQueue>CM-CD</DestinationQueue>
-                </CDCDBroadcastHtmlCacheMapping>
-              </TypeMappings>
-            </TypeBasedMappings>
-          </Routing>
-          <Options>
-            <SetNumberOfWorkers>1</SetNumberOfWorkers>
-            <SetMaxParallelism>1</SetMaxParallelism>
-            <SimpleRetryStrategy>
-              <ErrorQueueAddress>Error</ErrorQueueAddress>
-              <MaxDeliveryAttempts>1</MaxDeliveryAttempts>
-              <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled>
-            </SimpleRetryStrategy>
-          </Options>
-          <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory, Sitecore.Messaging"/>
-        </Foundation.HtmlCache.BroadcastHtmlCacheDelete>
-
-        <Foundation.HtmlCache.SendCacheQueueEntry>
-          <Transport>
-            <AzureServiceBus messagingTransport:require="AzureServiceBus">
-              <OneWay>true</OneWay>
-              <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <Mode>Standard</Mode>
-              <InputQueueName>CD-CM</InputQueueName>
-            </AzureServiceBus>
-            <SqlServer messagingTransport:require="SQL">
-              <OneWay>true</OneWay>
-              <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <InputQueueName>CD-CM</InputQueueName>
-            </SqlServer>
-          </Transport>
-          <Routing>
-            <TypeBasedMappings>
-              <TypeMappings>
-                <CDCDBroadcastHtmlCacheMapping>
-                  <Type>Sitecore.Marketing.Automation.Messaging.Messages.PurgeFromCampaignMessage, Sitecore.Marketing.Automation</Type>
-                  <DestinationQueue>CD-CM</DestinationQueue>
-                </CDCDBroadcastHtmlCacheMapping>
-              </TypeMappings>
-            </TypeBasedMappings>
-          </Routing>
-          <Options>
-            <SetNumberOfWorkers>1</SetNumberOfWorkers>
-            <SetMaxParallelism>1</SetMaxParallelism>
-            <SimpleRetryStrategy>
-              <ErrorQueueAddress>Error</ErrorQueueAddress>
-              <MaxDeliveryAttempts>1</MaxDeliveryAttempts>
-              <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled>
-            </SimpleRetryStrategy>
-          </Options>
-          <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory, Sitecore.Messaging"/>
-        </Foundation.HtmlCache.SendCacheQueueEntry>
-
-        <Foundation.HtmlCache.ThrottleProcessing>
-          <Transport>
-            <AzureServiceBus messagingTransport:require="AzureServiceBus">
-              <OneWay>false</OneWay>
-              <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <Mode>Standard</Mode>
-              <InputQueueName>CM-CM</InputQueueName>
-            </AzureServiceBus>
-            <SqlServer messagingTransport:require="SQL">
-              <OneWay>false</OneWay>
-              <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <InputQueueName>CM-CM</InputQueueName>
-            </SqlServer>
-          </Transport>
-          <Routing>
-            <TypeBasedMappings>
-              <TypeMappings>
-                <CDCDBroadcastHtmlCacheMapping>
-                  <Type>Sitecore.Marketing.Automation.Messaging.Messages.PurgeFromCampaignMessage, Sitecore.Marketing.Automation</Type>
-                  <DestinationQueue>CM-CM</DestinationQueue>
-                </CDCDBroadcastHtmlCacheMapping>
-              </TypeMappings>
-            </TypeBasedMappings>
-          </Routing>
-          <Options>
-            <SetNumberOfWorkers>1</SetNumberOfWorkers>
-            <SetMaxParallelism>1</SetMaxParallelism>
-            <SimpleRetryStrategy>
-              <ErrorQueueAddress>Error</ErrorQueueAddress>
-              <MaxDeliveryAttempts>1</MaxDeliveryAttempts>
-              <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled>
-            </SimpleRetryStrategy>
-          </Options>
-          <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory, Sitecore.Messaging"/>
-        </Foundation.HtmlCache.ThrottleProcessing>
       </Rebus>
     </Messaging>
   </sitecore>
