--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 obj
 bin
 packages
+/.vs/Foundation.HtmlCache/v15/.suo
+/.vs/Foundation.HtmlCache/v15/Server/sqlite3/db.lock
+/.vs/Foundation.HtmlCache/v15/Server/sqlite3/storage.ide
+/.vs/Foundation.HtmlCache/v15/Server/sqlite3/storage.ide-shm
+/.vs/Foundation.HtmlCache/v15/Server/sqlite3/storage.ide-wal
